styles.css
@font-face {
    font-family: 'Roboto';
    src: url('./assets/fonts/Roboto-Regular.woff2') format('woff2'),
        url('./assets/fonts/Roboto-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Roboto';
    src: url('./assets/fonts/Roboto-Bold.woff2') format('woff2'),
        url('./assets/fonts/Roboto-Bold.woff') format('woff');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

:root {
    --body-background: #e2e8f0;
    --sidebar-background: #155e75;
    --sidebar-font-color: white;

    --card-border-color: #059669;

    --header-background: white;
    --card-background: white;

    --sidebar-font-size: 1.3em;
    --category-font-size: 1.4em;
    --card-title-font-size: 1.1em;
    --general-font-size: 0.95em;
}

* {
    padding: 0;
    margin: 0;
}

body {
    height: 100vh;
    display: grid;
    grid-template-columns: 1fr 6fr;
    grid-template-rows: 1fr 6fr;
    font-family: 'Roboto', Verdana, Tahoma, sans-serif;

    background-color: var(--body-background);
}

.icon {
    width: 28px;
}

.sidebar-title-icon, .sidebar-icon {
    -webkit-filter: invert(100%);
    filter: invert(100%);
}

.sidebar-title-icon {
    width: 40px;
}

.sidebar-icon {
    width: 20px;
}

.sidebar {
    grid-column: 1 / 2;
    grid-row: 1 / 3;
    
    padding-left: 20px;
    padding-right: 50px;
    background-color: var(--sidebar-background);
    color: var(--sidebar-font-color);
    font-size: var(--sidebar-font-size);
    font-weight: bold;

    box-shadow: 1px 0px 5px 0px rgb(158 158 158);
    position: relative;
    z-index: 9;
}

.sidebar-title {
    display: grid;
    grid-template-columns: repeat(2, minmax(min-content, max-content));
    align-items: center;
    gap: 10px;
    padding-top: 15px;
    padding-bottom: 35px;
}

.sidebar-title > h2 {
    font-size: 1.2em;
}

.menu {
    display: grid;
    grid-template-rows: repeat(2, minmax(min-content, max-content));
    gap: 60px;
}

.menu > ul {
    list-style-type: none;
    display: grid;
    gap: 20px;
}

.menu li {

    display: grid;
    grid-template-columns: 40px 1fr;
    align-items: center;
    gap: 10px;
}

.menu img {
    justify-self: center;
}

.header {
    grid-row: 1 / 2;
    background-color: var(--header-background);

    display: grid;
    grid-template-columns: 1fr 1fr;

    gap: 10px;

    box-shadow: 0px 1px 5px 0px rgb(158 158 158);
    margin-bottom: 30px;
}

label[for=search] {
    height: 28px;
}

.search-bar, .avibox {
    padding-left: 40px;
    padding-bottom: 10px;
}

.search-bar {
    display: grid;
    grid-template-columns: 28px 1fr;
    padding-top: 20px;
    gap: 14px;
    align-items: center;
}

.search-bar > input[type=text] {
    all: unset;
    height: 30px;
    background-color: var(--body-background);
    border-radius: 10px;
    padding-left: 8px;
    padding-right: 8px;
}

.miniature-pfp {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    justify-self: center;
}

.login-container {
    display: grid;
    grid-template-columns: 30px 60px 150px;
    gap: 20px;

    justify-self: end;
    align-items: center;
}

.login-name {
    font-weight: bold;
    font-size: 1.15em;
}

.avibox {
    grid-row: 2 / 3;
    display: grid;
    grid-template-columns: 80px 1fr;
    grid-template-rows: repeat(2, minmax(min-content, max-content));
}

.avibox img {
    align-self: center;
    justify-self: right;
    grid-row: 1 / 3;
    grid-column: 1 / 2;
    width: 70px;
    height: 70px;
    border-radius: 50%;
}

.greetings, .name {
    grid-column: 2 / 3;
    padding-left: 15px;
}

.greetings {
    align-self: end;
}

.name {
    font-size: 1.4em;
    font-weight: bold;
    align-self: start;
}

.login-container, .button-container {
    padding-right: 80px;
}

.button-container {
    grid-column: 2 / 3;
    grid-row: 2 / 3;

    display: grid;
    grid-template-columns: 80px 80px 80px;
    gap: 50px;
    align-items: center;
    justify-self: end;
}

.header-button {
    height: 40px;
    width: 100px;
    border-radius: 100px;

    background-color: var(--sidebar-background);
    border: none;
    color: white;
    font-weight: bold;
    font-size: 1.02em;
}

.main-content {
    grid-row: 2 / 3;

    display: grid;
    grid-template-columns: 3fr 1fr;
    grid-template-rows: auto 1fr;

    gap: 30px;
}

.section-name {
    font-size: var(--category-font-size);
    padding-bottom: 8px;
}

.projects {
    grid-column: 1 / 2;
    grid-row: 1 / 3;
    padding-left: 40px;
}

.cards {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-template-rows: 1fr 1fr 1fr;
    gap: 30px;
    margin-bottom: 30px;
}

.card, .announcement-box, .trending-box {
    box-shadow: 1px 3px 6px 0px rgb(158, 158, 158);
}

.card {
    height: 230px;
    background-color: var(--card-background);
    border-radius: 8px;

    display: grid;
    grid-template-rows: 1fr 2fr 1fr;

    border-left: 8px solid var(--card-border-color);
    font-size: var(--general-font-size);
}

.card > h3 {
    padding-top: 20px;
    margin: 0;

    align-self: end;
}

.card > p {
    justify-self: start;
    color: darkslategray;
}

.card > h3, .card > p {
    padding-left: 20px;
    padding-right: 20px;
}

.card-icons {
    justify-self: end;
    padding-right: 20px;

    display: grid;
    grid-template-rows: 1fr;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 20px;
}

.announcements {
    grid-column: 2 / 3;
    grid-row: 1 / 2;
}

.announcements, .trending {
    width: 350px;
    padding-right: 40px;
}

.announcement-box, .trending-box {
    background-color: white;
    border-radius: 15px;
}

.announcement-box {
    padding: 30px;
}

.announcement-box h4 {
    font-size: var(--card-title-font-size);
}

.announcement-box > p {
    font-size: var(--general-font-size);
    color: darkslategray;
}

.announcement-box hr {
    margin-top: 20px;
    margin-bottom: 20px;
}

.trending {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
}

.trending-box {
    margin-bottom: 30px;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr;
    padding: 17px 0 17px 0;
    gap: 15px;
}

.user {
    display: grid;
    grid-template-columns: 100px 1fr;
}

.user > .image-cropper {
    grid-row: 1 / 3;
    justify-self: end;
    width: 50px;
    height: 50px;
    border-radius: 100%;
    overflow: hidden;
}

.user > .username, .user > .tagline {
    margin-left: 20px;
}

.user > .username {
    grid-column: 2 / 3;
    grid-row: 1 / 2;
    align-self: end;
}

.user > .tagline {
    grid-column: 2 / 3;
    grid-row: 2 / 3;

    color: gray;
}

.trending img {
    display: block;
    margin: auto;
    width: 50px;
}

